; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_constant_time_test.c_test_select_int.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_constant_time_test.c_test_select_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONSTTIME_TRUE = common dso_local global i32 0, align 4
@CONSTTIME_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @test_select_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_select_int(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* @CONSTTIME_TRUE, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @constant_time_select_int(i32 %6, i32 %7, i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @TEST_int_eq(i32 %9, i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

14:                                               ; preds = %2
  %15 = load i32, i32* @CONSTTIME_FALSE, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @constant_time_select_int(i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @TEST_int_eq(i32 %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %24

23:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %22, %13
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @TEST_int_eq(i32, i32) #1

declare dso_local i32 @constant_time_select_int(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
